fix overflow many participants, complate infinity pagination

--- a/src/pages/ParticipantsPage/ParticipantsPage.module.css
+++ b/src/pages/ParticipantsPage/ParticipantsPage.module.css
@@ -1,7 +1,12 @@
 .wrap {
   position: relative;
+  height: 100%;
 }
-
+.listWrap {
+  margin-top: 24px;
+  height: 90%;
+  overflow: scroll;
+}
 .partsList {
   display: flex;
   flex-wrap: wrap;
